--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -133,7 +133,7 @@
 
       <!-- Navigation -->
       <div class="text-center">
-        <a th:href="@{/decks}" class="btn btn-outline-secondary">Exit Quiz</a>
+        <a th:href="@{/deck/list}" class="btn btn-outline-secondary">Exit Quiz</a>
       </div>
     </div>
   </div>
